--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 	<properties>
 		<java-version>1.6</java-version>
 		<org.springframework-version>3.1.3.RELEASE</org.springframework-version>
-		<org.springldap-version>1.3.1.RELEASE</org.springldap-version>
 		<org.slf4j-version>1.6.1</org.slf4j-version>
+		<org.apache.tiles-version>2.2.2</org.apache.tiles-version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -89,7 +89,7 @@
 		<dependency>
 		    <groupId>org.springframework.ldap</groupId>
 		    <artifactId>spring-ldap-core</artifactId>
-		    <version>${org.springldap-version}</version>
+		    <version>1.3.1.RELEASE</version>
 		    <exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -193,8 +193,13 @@
 		<!-- Tiles for pretty templates. -->
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
-			<artifactId>tiles-extras</artifactId>
-			<version>2.2.2</version>
+			<artifactId>tiles-servlet</artifactId>
+			<version>${org.apache.tiles-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>${org.apache.tiles-version}</version>
 		</dependency>
 	</dependencies>
 	<repositories>	
